--- a/index.html
+++ b/index.html
@@ -976,6 +976,31 @@
             <div class="cell"></div>
           </div>
         </div>
+        <div class="container">
+          <div class="keys">
+            <!-- div.row*4>div.button*3 -->
+            <div class="row">
+              <button id="key-1" class="key">1</button>
+              <button id="key-2" class="key">2</button>
+              <button id="key-3" class="key">3</button>
+            </div>
+            <div class="row">
+              <button id="key-4" class="key">4</button>
+              <button id="key-5" class="key">5</button>
+              <button id="key-6" class="key">6</button>
+            </div>
+            <div class="row">
+              <button id="key-7" class="key">7</button>
+              <button id="key-8" class="key">8</button>
+              <button id="key-9" class="key">9</button>
+            </div>
+            <div class="row">
+              <button id="key-*" class="key">*</button>
+              <button id="key-0" class="key">0</button>
+              <button id="key-#" class="key">#</button>
+            </div>
+          </div>
+        </div>
         <div>
           <button id="reset">Reset</button>
         </div>
